--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<!--dependecies versions-->
 		<junit.version>4.12</junit.version>
 		<guava.version>19.0</guava.version>
+		<log4j.version>1.2.17</log4j.version>
+		<slf4j.version>1.7.12</slf4j.version>
 		<commons-collections4.version>4.1</commons-collections4.version>
 		<commons-lang3.version>3.4</commons-lang3.version>
 	</properties>
@@ -39,6 +41,23 @@
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
+			</dependency>
+
+			<!--Log4j-->
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j.version}</version>
 			</dependency>
 
 			<!--Apache commons-->
