--- a/tmm-model/pom.xml
+++ b/tmm-model/pom.xml
@@ -26,5 +26,19 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
+		<!--Log4j-->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
