--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
 
 		<!--Plugins-->
 		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+		<maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
 
-		<!--dependecies versions-->
+		<!--Dependencies versions-->
 		<junit.version>4.12</junit.version>
 		<guava.version>19.0</guava.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -103,6 +105,18 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven-compiler-plugin.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${maven-dependency-plugin.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${maven-jar-plugin.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
