--- a/tmm-desktop/pom.xml
+++ b/tmm-desktop/pom.xml
@@ -29,6 +29,11 @@
             <groupId>com.mar</groupId>
             <artifactId>tmm-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -70,4 +75,11 @@
             </plugin>                
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
