--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <slf4j.version>1.7.12</slf4j.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <commons-lang3.version>3.4</commons-lang3.version>
+        <piccolo2d.version>3.0</piccolo2d.version>
     </properties>
 
 
@@ -73,6 +74,18 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
+            </dependency>
+            
+            <!--Piccolo2d-->
+            <dependency>
+                <groupId>org.piccolo2d</groupId>
+                <artifactId>piccolo2d-core</artifactId>
+                <version>${piccolo2d.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.piccolo2d</groupId>
+                <artifactId>piccolo2d-extras</artifactId>
+                <version>${piccolo2d.version}</version>
             </dependency>
 
             <!--Modules-->
