--- a/tmm-desktop/pom.xml
+++ b/tmm-desktop/pom.xml
@@ -16,7 +16,17 @@
     </properties>
 
     <dependencies>
+        <!--Piccolo2d-->
+        <dependency>
+            <groupId>org.piccolo2d</groupId>
+            <artifactId>piccolo2d-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.piccolo2d</groupId>
+            <artifactId>piccolo2d-extras</artifactId>
+        </dependency>
 
+        <!--Modules-->
         <dependency>
             <groupId>com.mar</groupId>
             <artifactId>tmm-common</artifactId>
