--- a/tmm-desktop/pom.xml
+++ b/tmm-desktop/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>tmm-io</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.mar</groupId>
+            <artifactId>tmm-engine</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>SNAPSHOT</version>
